// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LastUpdated renders the LastUpdated component 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4D5061",
        "fontFamily": "apercu",
        "fontSize": 16,
        "marginBottom": 1,
        "marginTop": 1,
      },
      undefined,
    ]
  }
>
  Last updated today at 8:43 am
</Text>
`;

exports[`LastUpdated renders the LastUpdated component loading 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#4D5061",
        "fontFamily": "apercu",
        "fontSize": 16,
        "marginBottom": 1,
        "marginTop": 1,
      },
      undefined,
    ]
  }
>
  Loading...
</Text>
`;

exports[`LastUpdated shows error when studyspace info is stale 1`] = `
Array [
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
        },
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 10,
          "marginTop": 5,
        },
      ]
    }
  >
    <Text />
    <Text
      style={
        Array [
          Object {
            "color": "rgba(215, 38, 61, 1)",
            "flex": 1,
            "fontFamily": "apercu",
            "fontSize": 16,
            "marginBottom": 1,
            "marginLeft": 5,
            "marginTop": -1,
          },
          undefined,
        ]
      }
    >
      Our studyspace data is stale. Sorry about that. We're working on getting this fixed as quickly as possible.
    </Text>
  </View>,
  <Text
    style={
      Array [
        Object {
          "color": "#4D5061",
          "fontFamily": "apercu",
          "fontSize": 16,
          "marginBottom": 1,
          "marginTop": 1,
        },
        undefined,
      ]
    }
  >
    Last updated today at 8:41 am
  </Text>,
]
`;
